--- a/quotation.html
+++ b/quotation.html
@@ -1,211 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Quotation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    h2 { text-align: center; }
-    table { width: 100%; border-collapse: collapse; margin: 20px 0; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #f0f0f0; }
-    .section-title { margin-top: 40px; font-size: 18px; font-weight: bold; }
-    .signature-container {
-      margin-top: 40px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
     }
-    .signature-actions {
-      display: flex;
-      gap: 10px;
-      margin-top: 10px;
+    h1 {
+      font-size: 24px;
+      margin-bottom: 10px;
     }
-    canvas {
+    table {
       width: 100%;
-      max-width: 400px;
-      height: auto;
+      border-collapse: collapse;
+      margin-bottom: 16px;
+    }
+    th, td {
       border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
+    .section-title {
+      margin-top: 30px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+    #signature-pad {
+      border: 1px solid #ccc;
+      margin-top: 10px;
+      width: 100%;
+      height: 150px;
       touch-action: none;
     }
-    .signature-info {
+    #saved-signature {
+      margin-top: 20px;
       text-align: right;
     }
-    .money { text-align: right; }
-    .total-block { font-weight: bold; }
-    .no-print { margin: 20px 0; }
+    #saved-signature img {
+      width: 200px;
+      height: auto;
+      display: block;
+      margin-left: auto;
+    }
+    .totals {
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .print-button {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
     @media print {
-      .no-print, #signature, .signature-actions { display: none !important; }
+      #signature-controls, .print-button {
+        display: none;
+      }
     }
   </style>
 </head>
 <body>
+  <h1 id="project-name">Quotation</h1>
 
-  <h2 id="project-name"></h2>
-
-  <div class="no-print">
-    <button onclick="window.print()">🖨️ Print</button>
-  </div>
-
-  <div id="alat-table"></div>
-  <div id="guard-table"></div>
-
-  <div class="section-title">Discount and Grand Total</div>
-  <table>
-    <tr>
-      <th>Discount</th>
-      <td id="discount" class="money"></td>
-    </tr>
-    <tr>
-      <th>Grand Total</th>
-      <td id="grand-total" class="money"></td>
-    </tr>
-  </table>
-
-  <div class="section-title">Customer Signature</div>
-  <div class="signature-container">
-    <canvas id="signature" width="400" height="200"></canvas>
-    <div class="signature-actions no-print">
-      <button onclick="clearSignature()">Clear</button>
-      <button onclick="saveSignature()">Save</button>
-    </div>
-    <div class="signature-info">
-      <div><strong>Customer Signature</strong></div>
-      <img id="saved-signature" src="" alt="" style="max-width: 300px; display: none;" />
-      <div id="user-name"></div>
-    </div>
-  </div>
-
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const project = urlParams.get("project");
-    const ordersParam = urlParams.get("orders");
-    const discount = urlParams.get("discount");
-    const grandtotal = urlParams.get("grandtotal");
-    const user = urlParams.get("user");
-
-    const alatItems = [];
-    const guardItems = [];
-
-    if (project) document.getElementById("project-name").innerText = `Project: ${decodeURIComponent(project)}`;
-    if (discount) document.getElementById("discount").innerText = formatCurrency(discount);
-    if (grandtotal) document.getElementById("grand-total").innerText = formatCurrency(grandtotal);
-    if (user) document.getElementById("user-name").innerText = decodeURIComponent(user);
-
-    if (ordersParam) {
-      const rows = decodeURIComponent(ordersParam).split("||");
-      rows.forEach(row => {
-        const [item, category, cost, qty, total] = row.split("|");
-        const data = { item, category, cost, qty, total };
-        if (category === "Guard and Others") {
-          guardItems.push(data);
-        } else {
-          alatItems.push(data);
-        }
-      });
-
-      if (alatItems.length > 0) {
-        renderTable(alatItems, "Total Cost Alat", "alat-table");
-      }
-
-      if (guardItems.length > 0) {
-        renderTable(guardItems, "Total Cost Guard", "guard-table");
-      }
-    }
-
-    function renderTable(data, title, containerId) {
-      const section = document.getElementById(containerId);
-      let html = `<div class="section-title">${title}</div><table><tr>
+  <div class="section-title">Order Items</div>
+  <table id="orders-table">
+    <thead>
+      <tr>
         <th>Item</th>
         <th>Category</th>
         <th>Cost</th>
         <th>Qty</th>
-        <th>Total Cost</th>
-      </tr>`;
-      data.forEach(d => {
-        html += `<tr>
-          <td>${d.item}</td>
-          <td>${d.category}</td>
-          <td class="money">${formatCurrency(d.cost)}</td>
-          <td>${d.qty}</td>
-          <td class="money">${formatCurrency(d.total)}</td>
-        </tr>`;
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <div class="totals" id="total-orders-cost"></div>
+
+  <div class="section-title">Guard and Others</div>
+  <table id="guard-table">
+    <thead>
+      <tr>
+        <th>Item</th>
+        <th>Category</th>
+        <th>Cost</th>
+        <th>Qty</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <div class="totals" id="total-guard-cost"></div>
+
+  <div class="totals">Discount: <span id="discount"></span></div>
+  <div class="totals">Grand Total: <span id="grand-total"></span></div>
+
+  <div class="section-title">Customer Signature</div>
+  <canvas id="signature-pad"></canvas>
+  <div id="signature-controls">
+    <button onclick="clearSignature()">Clear</button>
+    <button onclick="saveSignature()">Save</button>
+  </div>
+  <div id="saved-signature"></div>
+  <div class="print-button">
+    <button onclick="window.print()">Print PDF</button>
+  </div>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+
+    const project = params.get("project") || "";
+    const orders = params.get("orders") || "";
+    const guardorders = params.get("guardorders") || "";
+    const totalcostorders = params.get("totalcostorders") || "0";
+    const totalcostGO = params.get("totalcostGO") || "0";
+    const discount = params.get("discount") || "0";
+    const grandtotal = params.get("grandtotal") || "0";
+    const user = params.get("user") || "";
+
+    document.getElementById("project-name").textContent = `Quotation for ${project}`;
+    document.getElementById("total-orders-cost").textContent = `Total Cost (Alat): Rp${formatCurrency(totalcostorders)}`;
+    document.getElementById("total-guard-cost").textContent = `Total Cost (Guard and Others): Rp${formatCurrency(totalcostGO)}`;
+    document.getElementById("discount").textContent = `Rp${formatCurrency(discount)}`;
+    document.getElementById("grand-total").textContent = `Rp${formatCurrency(grandtotal)}`;
+
+    function formatCurrency(num) {
+      return parseInt(num || 0).toLocaleString("id-ID");
+    }
+
+    function populateTable(data, tableBodyId) {
+      const tbody = document.getElementById(tableBodyId);
+      if (!data) return;
+
+      const rows = data.split("||");
+      rows.forEach(row => {
+        const [item, category, cost, qty, total] = row.split("|");
+        if (item) {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${item}</td>
+            <td>${category}</td>
+            <td>Rp${formatCurrency(cost)}</td>
+            <td>${qty}</td>
+            <td>Rp${formatCurrency(total)}</td>
+          `;
+          tbody.appendChild(tr);
+        }
       });
-      html += `</table>`;
-      section.innerHTML = html;
     }
 
-    function formatCurrency(value) {
-      const number = parseInt(value);
-      if (isNaN(number)) return "Rp 0";
-      return "Rp " + number.toLocaleString("id-ID");
-    }
+    populateTable(orders, "orders-table").toString;
+    populateTable(guardorders, "guard-table").toString;
 
-    // Signature Pad
-    const canvas = document.getElementById("signature");
+    // Signature pad
+    const canvas = document.getElementById("signature-pad");
     const ctx = canvas.getContext("2d");
     let isDrawing = false;
 
-    const getPosition = (e) => {
-      if (e.touches && e.touches.length > 0) {
-        const rect = canvas.getBoundingClientRect();
-        return {
-          x: e.touches[0].clientX - rect.left,
-          y: e.touches[0].clientY - rect.top
-        };
-      }
-      return null;
-    };
+    canvas.addEventListener("mousedown", startDraw);
+    canvas.addEventListener("mousemove", draw);
+    canvas.addEventListener("mouseup", stopDraw);
+    canvas.addEventListener("touchstart", startDraw, { passive: true });
+    canvas.addEventListener("touchmove", drawTouch, { passive: true });
+    canvas.addEventListener("touchend", stopDraw);
 
-    canvas.addEventListener("mousedown", e => {
+    function getPos(e) {
+      const rect = canvas.getBoundingClientRect();
+      return {
+        x: (e.clientX || e.touches[0].clientX) - rect.left,
+        y: (e.clientY || e.touches[0].clientY) - rect.top,
+      };
+    }
+
+    function startDraw(e) {
       isDrawing = true;
+      const { x, y } = getPos(e);
       ctx.beginPath();
-      ctx.moveTo(e.offsetX, e.offsetY);
-    });
+      ctx.moveTo(x, y);
+    }
 
-    canvas.addEventListener("mousemove", e => {
-      if (isDrawing) {
-        ctx.lineTo(e.offsetX, e.offsetY);
-        ctx.stroke();
-      }
-    });
+    function draw(e) {
+      if (!isDrawing) return;
+      const { x, y } = getPos(e);
+      ctx.lineTo(x, y);
+      ctx.stroke();
+    }
 
-    canvas.addEventListener("mouseup", () => isDrawing = false);
-    canvas.addEventListener("mouseleave", () => isDrawing = false);
+    function drawTouch(e) {
+      if (!isDrawing) return;
+      const { x, y } = getPos(e);
+      ctx.lineTo(x, y);
+      ctx.stroke();
+    }
 
-    canvas.addEventListener("touchstart", e => {
-      e.preventDefault();
-      const pos = getPosition(e);
-      if (pos) {
-        isDrawing = true;
-        ctx.beginPath();
-        ctx.moveTo(pos.x, pos.y);
-      }
-    });
-
-    canvas.addEventListener("touchmove", e => {
-      e.preventDefault();
-      const pos = getPosition(e);
-      if (pos && isDrawing) {
-        ctx.lineTo(pos.x, pos.y);
-        ctx.stroke();
-      }
-    });
-
-    canvas.addEventListener("touchend", () => isDrawing = false);
+    function stopDraw() {
+      isDrawing = false;
+      ctx.closePath();
+    }
 
     function clearSignature() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      document.getElementById("saved-signature").style.display = "none";
+      document.getElementById("saved-signature").innerHTML = "";
     }
 
     function saveSignature() {
       const dataURL = canvas.toDataURL();
-      document.getElementById("saved-signature").src = dataURL;
-      document.getElementById("saved-signature").style.display = "block";
+      document.getElementById("saved-signature").innerHTML = `
+        <div>Customer Signature:</div>
+        <img src="${dataURL}" alt="Signature">
+        <div>${user}</div>
+      `;
     }
   </script>
-
 </body>
 </html>
